Moved math stuff

--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -157,10 +157,6 @@
     <ClInclude Include="Engine\Application.h" />
     <ClInclude Include="Engine\ComponentContainer.h" />
     <ClInclude Include="Engine\GameObject.h" />
-    <ClInclude Include="Engine\IntVector2.h" />
-    <ClInclude Include="Engine\IntVector3.h" />
-    <ClInclude Include="Engine\IntVector4.h" />
-    <ClInclude Include="Engine\Math.h" />
     <ClInclude Include="Engine\Maths\Matrices\GenericMatrix.h" />
     <ClInclude Include="Engine\Maths\Vectors\DoubleVector2.h" />
     <ClInclude Include="Engine\Maths\Vectors\DoubleVector3.h" />
@@ -180,15 +176,11 @@
     <ClInclude Include="Engine\Object Management\ObjectContainer.h" />
     <ClInclude Include="Engine\Object Management\SafeObjRef.h" />
     <ClInclude Include="Engine\Object.h" />
-    <ClInclude Include="Engine\Quaternion.h" />
     <ClInclude Include="Engine\Rendering\IndexBufferData.h" />
     <ClInclude Include="Engine\Rendering\Mesh.h" />
     <ClInclude Include="Engine\Rendering\RenderingBufferDataContainer.h" />
     <ClInclude Include="Engine\Rendering\VertexBufferData.h" />
     <ClInclude Include="Engine\SafePtr.h" />
-    <ClInclude Include="Engine\Vector2.h" />
-    <ClInclude Include="Engine\Vector3.h" />
-    <ClInclude Include="Engine\Vector4.h" />
     <ClInclude Include="Include\Exceptions\DirectXException.h" />
     <ClInclude Include="Include\Exceptions\DivideByZeroException.h" />
     <ClInclude Include="Include\Exceptions\Exception.h" />
@@ -199,9 +191,28 @@
     <ClInclude Include="Include\Game\Color.h" />
     <ClInclude Include="Include\Game\IDebugStringReturner.h" />
     <ClInclude Include="Include\Game\Input.h" />
+    <ClInclude Include="Include\Game\IntVector2.h" />
+    <ClInclude Include="Include\Game\IntVector3.h" />
+    <ClInclude Include="Include\Game\IntVector4.h" />
     <ClInclude Include="Include\Game\Key.h" />
+    <ClInclude Include="Include\Game\Math.h" />
     <ClInclude Include="Include\Game\Output.h" />
+    <ClInclude Include="Include\Game\Quaternion.h" />
     <ClInclude Include="Include\Game\Time\Time.h" />
+    <ClInclude Include="Include\Game\Vector2.h" />
+    <ClInclude Include="Include\Game\Vector3.h" />
+    <ClInclude Include="Include\Game\Vector4.h" />
+    <ClInclude Include="Include\Maths\DoubleVector2.h" />
+    <ClInclude Include="Include\Maths\DoubleVector3.h" />
+    <ClInclude Include="Include\Maths\DoubleVector4.h" />
+    <ClInclude Include="Include\Maths\FloatVector2.h" />
+    <ClInclude Include="Include\Maths\FloatVector3.h" />
+    <ClInclude Include="Include\Maths\FloatVector4.h" />
+    <ClInclude Include="Include\Maths\GenericMatrix.h" />
+    <ClInclude Include="Include\Maths\Vector2Base.h" />
+    <ClInclude Include="Include\Maths\Vector3Base.h" />
+    <ClInclude Include="Include\Maths\Vector4Base.h" />
+    <ClInclude Include="Include\Maths\VectorBase.h" />
     <ClInclude Include="Source\DirectX\DepthBuffer.h" />
     <ClInclude Include="Source\DirectX\DirectXHelper.h" />
     <ClInclude Include="Source\DirectX\GraphicsDevice.h" />
@@ -222,10 +233,8 @@
     <ClCompile Include="Engine\Application.cpp" />
     <ClCompile Include="Engine\ComponentContainer.cpp" />
     <ClCompile Include="Engine\GameObject.cpp" />
-    <ClCompile Include="Engine\Math.cpp" />
     <ClCompile Include="Engine\Object Management\GlobalObjectManager.cpp" />
     <ClCompile Include="Engine\Object.cpp" />
-    <ClCompile Include="Engine\Quaternion.cpp" />
     <ClCompile Include="Engine\Rendering\Mesh.cpp" />
     <ClCompile Include="Source\DirectX\DepthBuffer.cpp" />
     <ClCompile Include="Source\DirectX\GraphicsDevice.cpp" />
@@ -239,7 +248,9 @@
     <ClCompile Include="Source\Formatting\NumberFormatting.cpp" />
     <ClCompile Include="Source\Game\Color.cpp" />
     <ClCompile Include="Source\Game\Input.cpp" />
+    <ClCompile Include="Source\Game\Math.cpp" />
     <ClCompile Include="Source\Game\Output.cpp" />
+    <ClCompile Include="Source\Game\Quaternion.cpp" />
     <ClCompile Include="Source\Game\Time.cpp" />
     <ClCompile Include="Source\Windows\GameWindow.cpp" />
     <ClCompile Include="Source\Windows\Window.cpp" />
